# dev-project

./: .gitignore  .release-please-manifest.json  mise.toml  release-please-config.json
.devcontainer/: devcontainer.json
.github/workflows/: backend-tests.yaml  docker-build-push.yaml  e2e-tests.yaml  frontend-test.yaml  frontend-tests.yaml  release-please.yaml  sample-update-gitops.yaml  update-gitops.yaml
kubernetes/: py-test.py  pyproject.toml  setup_cluster_local  setup_cluster_local_with_comments
kubernetes/commented_code/: deploy-keys  python-e2e-test.py  setup-getops  setup_cluster_gitops  setup_cluster_local_with_comments  setupt-deploy-key  test.py  update-kustomize-tag  update-kustomize_tag  update_kustomize_tag
kubernetes/commented_gitworkflows/: test-update.yaml  update-test1.yaml
kubernetes/gitworkflows/: update-gitops.yaml
kubernetes/manifests/dev/: kustomization.yaml
kubernetes/manifests/dev/frontend/: kustomization.yaml
scripts/: setup  setup_project  update_kustomize_tag
src/backend/: CHANGELOG.md  Dockerfile  pyproject.toml
src/backend/data/: sessions.csv
src/demo/: Dockerfile
src/frontend/: CHANGELOG.md  Dockerfile  pyproject.toml
src/frontend/src/frontend/: main.py
