[project]
name = "backend"
version = "0.0.0"
description = "Demo Project"
readme = "README.md"
authors = [{ name = "Abdul Shukor", email = "ashukoor@gmail.com" }]
requires-python = ">=3.14"
dependencies = ["fastapi>=0.121.3", "httpx>=0.28.1", "uvicorn>=0.38.0"]

[project.scripts]
dev_project = "backend.main:main"

#[tool.hatch.build.targets.wheel]
#packages = ["src/backend"]

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"
