[project]
name = "backend"
version = "0.0.0"
description = "Demo Project"
readme = "README.md"
authors = [{ name = "Abdul Shukor", email = "ashukoor@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.3",
    "httpx>=0.28.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.6",
    "uvicorn>=0.38.0",
]

[project.scripts]
dev-project-backend = "backend.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"
